<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminScreenActivity"
    android:background="@color/bar_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_admin_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/bar_color">

        <com.android.trustmanagementapp.utils.MSPTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:textSize="20sp"/>

        <com.android.trustmanagementapp.utils.MSPButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:id="@+id/logout_admin"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nest_expense_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_admin_screen">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_admin_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_create_group_admin_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/create_group"
                android:textColor="@color/white"
                />
            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_add_member_admin_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/add_member_detail"
                android:textColor="@color/white"
                />

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_add_account_admin_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/add_account_detail"
                android:textColor="@color/white"
                />

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_add_expense_admin_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/add_expense_month_wise"
                android:textColor="@color/white"
                />

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_view_account_detail_admin_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/view_account_detail"
                android:textColor="@color/white"
                />

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_view_member_admin_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/view_member_detail"
                android:textColor="@color/white"
                />

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_add_timeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/add_timeline"
                android:textColor="@color/white"
                />

            <com.android.trustmanagementapp.utils.MSPButton
                android:id="@+id/btn_view_timeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:text="@string/view_all_timeline"
                android:textColor="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="2dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nest_expense_view">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_admin_group_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            tools:listitem="@layout/item_group_rc_layout" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>