<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateGroupActivity"
    android:background="@color/bar_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_group"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/bar_color">
        <com.android.trustmanagementapp.utils.MSPTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/toolbar_label_group_Name"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_create_group_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_group">

        <ImageView
            android:id="@+id/iv_group_icon"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/group_icon"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_image_24"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_group_name"
            android:textColorHint="@color/teal_700"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <com.android.trustmanagementapp.utils.MSPEditText
                android:id="@+id/et_create_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_previous_balance"
            android:textColorHint="@color/teal_700"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <com.android.trustmanagementapp.utils.MSPEditText
                android:id="@+id/et_group_previous_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.android.trustmanagementapp.utils.MSPTextViewBold
            android:id="@+id/tv_select_group_date"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/date_background"
            android:text="@string/originate_date"
            android:textColor="@color/white"
            />

        <com.android.trustmanagementapp.utils.MSPButton
            android:id="@+id/btn_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:text="@string/create_group"
            android:textColor="@color/white"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>