<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordAdminActivity"
    android:background="@color/bar_color"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_forgot_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.android.trustmanagementapp.utils.MSPTextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forgot_password2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_forgot_bar_login">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            app:cardBackgroundColor="#36454F"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="14dp"

                >

                <com.android.trustmanagementapp.utils.MSPTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_forgot_log"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14dp"
                    android:hint="@string/enter_email_address"
                    android:textColorHint="@color/teal_700"
                    app:boxStrokeColor="@color/teal_700"
                    app:hintTextColor="@color/teal_700">

                    <com.android.trustmanagementapp.utils.MSPEditText
                        android:id="@+id/et_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="16dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.android.trustmanagementapp.utils.MSPButton
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="14dp"
                    android:background="@drawable/button_background"

                    android:text="@string/reset"
                    android:textColor="@color/white"

                     />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>